--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ meta-description: This is my portfolio website for starting to freelance
 <!-- SECOND: ABOUT SECTION ---->
   <section id="about-banner" class="center-text">
 
-    <div class="left-pull left-text">
-    <h2> Hi, I'm Laura </h2>
-      <p>I am a traveller by day and coder by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. To learn more head over to my professional-ish <a href="/blog.html">blog</a>.
-      Wan't work with me? <a href="#register">I'd love to hear from you.</a>
+    <div class="left-pull">
+    <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
+      <p class="left-text">I am a traveller by day and coder by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. To learn more head over to my professional-ish <a href="/blog.html">blog</a>.
+      Wan't work with me? Drop me a <a href="#register">line.</a>
       </p>
       </div>
 
@@ -32,37 +32,49 @@ meta-description: This is my portfolio website for starting to freelance
 
 <!-- THIRD: WHAT I DO SECTION ---->
 <section class="center-text" id="do-banner">
-  <div class="darker">
     <div>
       <h3>CHECK IT</h3>
     </div>
 
-    <div class="grid spacebetween">
-        <div class="col border"><i class="fa fa-code" aria-hidden="true"></i>
-          <h5>Quality Code</h5>
-          <p>
-          I use the most up to date technology to build including HTML5, CSS3, JQuery and more</p>
+    <div class="grid_sm-2_xs-1 box-columns">
+        <div class="col">
+          <div class="darker-box">
+            <i class="fa fa-code" aria-hidden="true"></i>
+            <h5>Quality <br> Code</h5>
+            <p>
+            I use the most up to date technology to build including HTML5, CSS3, JQuery and more</p>
+          </div>
         </div>
 
-        <div class="col border"><i class="fa fa-mobile" aria-hidden="true"></i>
-          <h5>Responsive Design</h5>
+
+        <div class="col">
+          <div class="darker-box">
+          <i class="fa fa-mobile" aria-hidden="true"></i>
+          <h5>Responsive <br> Design </h5>
           <p>
           Your responsive site will look awesome on all screen sizes. Even the Samsung that blows up.</p>
         </div>
+        </div>
 
-        <div class="col border">
+
+        <div class="col">
+          <div class="darker-box">
           <i class="fa fa-users" aria-hidden="true"></i>
-          <h5>User Friendly</h5>
+          <h5>User <br> Friendly</h5>
           <p>
           Interacting with your customized site will be easy, fun, and will let your brand shine.</p>
+          </div>
         </div>
 
-        <div class="col border">
-      <i class="fa fa-line-chart" aria-hidden="true"></i>
-          <h5>SEO Star Power</h5>
+      <div class="col">
+        <div class="darker-box">
+        <i class="fa fa-line-chart" aria-hidden="true"></i>
+          <h5>SEO <br> Star Power</h5>
           <p>
-          I will optimize your website for with keywords to give you an SEO boost.</p>
+          I will optimize your website to give you an SEO boost. Blah blah blah add some text to fill this box</p>
         </div>
+      </div>
+
     </div>
   </div>
   <a id="scroll" class="scroll-to centered chevron" href="#process"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
@@ -77,7 +89,7 @@ meta-description: This is my portfolio website for starting to freelance
 
   <div>
     <p>
-      For each client I go through a 3 step process. First we need to nail your strategy then we can move on to web design. Finally, we get to actually developing and building your site.
+      You built the business. I'll build the website. We will go through a highly individualized process every step of the way from scope and strategy to design and development.
      </p>
       <a  href="/process.html" class="button">Learn More</a>
   </div>
@@ -86,15 +98,16 @@ meta-description: This is my portfolio website for starting to freelance
 
 <!--THIS IS THE PORTFOLIO SECTION  -->
 <section class="centered-text" id="portfolio-banner">
-<div>
-  <h3>Street Cred</h3>
-</div>
-  <div class="owl-carousel loop owl-theme ">
-  <div class="item"> <img src="/images/unicorn.jpg" /> </div>
-  <div class="item"> <img src="/images/unicorn2.jpg" /> </div>
-  <div class="item"> <img src="/images/unicorn3.jpg" /> </div>
-  <div class="item"> <img src="/images/unicorn4.jpg" /> </div>
-</div>
+        <div>
+        <h3>Street Cred</h3>
+      </div>
+        <div class="owl-carousel loop owl-theme ">
+        <div class="item"> <img src="/images/unicorn.jpg" /> </div>
+        <div class="item"> <img src="/images/unicorn2.jpg" /> </div>
+        <div class="item"> <img src="/images/unicorn3.jpg" /> </div>
+        <div class="item"> <img src="/images/unicorn4.jpg" /> </div>
+        </div>
+
 <a id="scroll" class="scroll-to" href="#register"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 
 </section>
@@ -103,9 +116,9 @@ meta-description: This is my portfolio website for starting to freelance
 <!-- THIS IS THE CONTACT FORM -->
 <section class="centered centered-text" id="register">
 
-  <div class="colorback">
-      <h3> Drop Me a Line </h3>
-      <p> Fill out the form below, tell me a bit about your project, and let's make a kick ass website </p>
+  <div>
+      <h3> Get in touch </h3>
+      <p> Fill out the form below, tell me a bit about your project, and I'll be in touch to build your kick ass website. Beep. </p>
 
       <form class="grid-center spacebetween" action="https://formspree.io/treganowanl@gmail.com"
           method="POST">
@@ -118,14 +131,14 @@ meta-description: This is my portfolio website for starting to freelance
             <input type="email" name="_replyto" placeholder="Your Email">
         </div>
         <div class="col-8">
-          <textarea placeholder="Tell me about your website dreams"></textarea>
+          <textarea placeholder="Budget. Timeline. Business size."></textarea>
         </div>
         <div class="col-12">
-          <input type="submit" value="Send" class="button">
+          <input type="submit" value="Submit" class="button">
         </div>
       </form>
   </div>
-  <a id="scroll" class="scroll-to centered chevron" href="#intro-banner"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
+  <a id="scroll" class="scroll-to centered chevron" href="header"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
 </section>
 
 {% include instagram.html %}
