--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Portfolio Freelance Website
-meta-description: This is my portfolio website for starting to freelance
+title: Laura Treganowan
+meta-description: Freelance Web Design
 ---
 
 
@@ -20,10 +20,10 @@ meta-description: This is my portfolio website for starting to freelance
 
     <div class="left-pull">
     <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
-      <p class="left-text">I am a traveller by day and coder by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. To learn more head over to my professional-ish <a href="/blog.html">blog</a>.
-      Want work with me? Drop me a <a href="#register">line.</a>
+      <p class="left-text">I am a traveller by day and coder by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want work with me? Drop me a <a href="#register">line.</a>
       </p>
       </div>
+      <!-- To learn more head over to my professional-ish <a href="/blog.html">blog</a>. -->
 
     <a id="scroll" class="scroll-to centered chevron"  href="#do-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 
@@ -91,7 +91,7 @@ meta-description: This is my portfolio website for starting to freelance
     <p>
       You built the business. I'll build the website. We will go through a highly individualized process every step of the way from scope and strategy to design and development.
      </p>
-      <a  href="/process.html" class="button">Learn More</a>
+      <!-- <a  href="/process.html" class="button">Learn More</a> -->
   </div>
     <a id="scroll" class="scroll-to centered chevron" href="#portfolio-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 </section>
@@ -100,12 +100,15 @@ meta-description: This is my portfolio website for starting to freelance
 <section class="centered-text" id="portfolio-banner">
         <div>
         <h3>Street Cred</h3>
+        <p>
+          Finishing up some projects. Portfolio coming soon! Meanwhile, enjoy the slideshow of my boyfriend.
+        </p>
       </div>
         <div class="owl-carousel loop owl-theme ">
-        <div class="item"> <img src="/images/unicorn.jpg" /> </div>
-        <div class="item"> <img src="/images/unicorn2.jpg" /> </div>
-        <div class="item"> <img src="/images/unicorn3.jpg" /> </div>
-        <div class="item"> <img src="/images/unicorn4.jpg" /> </div>
+        <div class="item"> <img src="/images/biggie.jpg" /> </div>
+        <div class="item"> <img src="/images/biggie.jpg" /> </div>
+        <div class="item"> <img src="/images/biggie.jpg" /> </div>
+        <div class="item"> <img src="/images/biggie.jpg" /> </div>
         </div>
 
 <a id="scroll" class="scroll-to" href="#register"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
@@ -131,7 +134,7 @@ meta-description: This is my portfolio website for starting to freelance
             <input type="email" name="_replyto" placeholder="Your Email">
         </div>
         <div class="col-8">
-          <textarea placeholder="Budget. Timeline. Business size."></textarea>
+          <textarea placeholder="Budget. Timeline. Business size. Etc."></textarea>
         </div>
         <div class="col-12">
           <input type="submit" value="Submit" class="button">
