--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Laura Treganowan
 meta-description: Freelance Web Design
+featured-image_path: images/whitedesk.jpg 
 ---
 
 
