--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Laura Treganowan
-meta-description: Freelance Web Design
-featured-image_path: images/whitedesk.jpg 
+meta-description: Freelance Web Development
+featured-image_path: images/whitedesk.jpg
 ---
 
 
@@ -10,7 +10,7 @@ featured-image_path: images/whitedesk.jpg
   <section id="intro-banner" class="center-text">
 
     <div>
-      <h1 class="relative"> Freelance Web Design </h1>
+      <h1 class="relative"> Freelance Web Development </h1>
       <h4 class="relative">Talk Nerdy To Me</h4>
   </div>
   <a id="scroll" class="scroll-to centered chevron" href="#about-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
