--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ featured-image_path: images/whitedesk.jpg
 
     <div class="left-pull">
     <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
-      <p class="left-text">I am a traveller by day and developer by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want work with me? Drop me a <a href="#register">line.</a>
+      <p class="left-text">I am a traveller by day and developer by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
       </p>
       </div>
       <!-- To learn more head over to my professional-ish <a href="/blog.html">blog</a>. -->
