--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ featured-image_path: images/whitedesk.jpg
 
     <div class="left-pull">
     <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
-      <p class="left-text">I am a traveller by day and developer by night. I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
+      <p class="left-text"> I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
       </p>
       </div>
       <!-- To learn more head over to my professional-ish <a href="/blog.html">blog</a>. -->
@@ -43,7 +43,7 @@ featured-image_path: images/whitedesk.jpg
             <i class="fa fa-code" aria-hidden="true"></i>
             <h5>Quality <br> Code</h5>
             <p>
-            I use the most up to date technology to build including HTML5, CSS3, JQuery and more</p>
+            I use the most up to date technology to build including HTML5, CSS3, JavaScript, JQuery and more</p>
           </div>
         </div>
 
@@ -63,7 +63,7 @@ featured-image_path: images/whitedesk.jpg
           <i class="fa fa-users" aria-hidden="true"></i>
           <h5>User <br> Friendly</h5>
           <p>
-          Interacting with your customized site will be easy, fun, and will let your brand shine.</p>
+          Not only will your site be clean and easy for the user to interact with. You will be in control of content on your site that is easily editable through CloudCannon. </p>
           </div>
         </div>
 
@@ -72,7 +72,7 @@ featured-image_path: images/whitedesk.jpg
         <i class="fa fa-line-chart" aria-hidden="true"></i>
           <h5>SEO <br> Star Power</h5>
           <p>
-          I will optimize your website to give you an SEO boost. Blah blah blah add some text to fill this box</p>
+          Keywords, Google Analytics, Oh my! I will optimize your website so you will get a little boost to pop up on a Google search.  </p>
         </div>
       </div>
 
@@ -102,7 +102,7 @@ featured-image_path: images/whitedesk.jpg
         <div>
         <h3>Street Cred</h3>
         <p>
-          Finishing up some projects. Portfolio coming soon! Meanwhile, enjoy the slideshow of my boyfriend.
+          Finishing up some projects. Portfolio coming soon! 
         </p>
       </div>
         <div class="owl-carousel loop owl-theme ">
@@ -135,7 +135,7 @@ featured-image_path: images/whitedesk.jpg
             <input type="email" name="_replyto" placeholder="Your Email">
         </div>
         <div class="col-8">
-          <textarea placeholder="Budget. Timeline. Business size. Etc."></textarea>
+          <textarea placeholder="Budget. Timeline. Business size. Social Links. Etc."></textarea>
         </div>
         <div class="col-12">
           <input type="submit" value="Submit" class="button">
