--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ featured-image_path: images/whitedesk.jpg
 
     <div class="left-pull">
     <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
-      <p class="left-text"> I design and build hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
+      <p class="left-text"> Party in the front! I am a front-end developer that builds hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
       </p>
       </div>
       <!-- To learn more head over to my professional-ish <a href="/blog.html">blog</a>. -->
@@ -92,7 +92,7 @@ featured-image_path: images/whitedesk.jpg
     <p>
       You built the business. I'll build the website. We will go through a highly individualized process every step of the way from scope and strategy to design and development.
      </p>
-      <!-- <a  href="/process.html" class="button">Learn More</a> -->
+      <a  href="/process.html" class="button">Learn More</a>
   </div>
     <a id="scroll" class="scroll-to centered chevron" href="#portfolio-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 </section>
@@ -102,7 +102,7 @@ featured-image_path: images/whitedesk.jpg
         <div>
         <h3>Street Cred</h3>
         <p>
-          Finishing up some projects. Portfolio coming soon! 
+          Finishing up some projects. Portfolio coming soon!
         </p>
       </div>
         <div class="owl-carousel loop owl-theme ">
