--- a/process.html
+++ b/process.html
@@ -2,25 +2,91 @@
 layout: default
 description: process
 ---
-<section>
-  <div class="feedpost">
-    <h4>Strategy</h4>
-    <p>
-      Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.
+<section class="feedpost">
+  <div class="centered-text">
+    <h4>Web Development Process</h4>
+    <p class="cenetered">
+      I build quality websites and blogs for individuals and small businesses to establish a brand, attract the right audience, and create credibility.
     </p>
+  </div>
+  <div class="feedpost">
+    <h5>1. Planning</h5>
+    <p>
+      First things first, meeting of the minds. We sit down and sest clear goals and strategy. Your website will be a true reflection of your business. We will make sure we are targeting the right audience. It's time to look at competitiors, inspirations, and nail your vision.
+    </p>
+    <ul>
+      <li> Requirement Analysis </li>
+      <li> Project character </li>
+      <li> Sitemap </li>
+      <li> Contract, Timeline, Budget </li>
+      <li> Required Resources</li>
+    </ul>
+
+    </div>
   </div>
 
 <div class="feedpost">
-  <h4>Design</h4>
+  <h5>2. Design</h5>
   <p>
-    Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.
+    Let’s get visual. It’s time to put those words into something we can see. In this phase I will send you a wireframe of your website. Color schemes, fonts, themes oh my!
+  </p>
+  <ul>
+    <li> Wireframe </li>
+    <li> Mockups </li>
+    <li> Review and approve </li>
+    <li> Slice and code HTML/CSS </li>
+  </ul>
+</div>
+
+<div class="feedpost">
+  <h5>3.Development</h5>
+  <p>
+    HTML me baby! This is where I put my nerdiest glasses on, shut out the world, and build your site from somewhere in Thailand. Exotic!
+  </p>
+  <ul>
+    <li> Code templates</li>
+    <li> Special feature development</li>
+    <li> Fill with content </li>
+    <li> Test and verify</li>
+    <li> Client CloudCannon set up</li>
+  </ul>
+</div>
+
+<div class="feedpost">
+  <h5> 4.Launch</h5>
+  <p>
+    Blast off! Here we hook up the domain to your shiny new website. We will give it the finishing touches and you will be ready for business.
+  </p>
+  <ul>
+    <li> Final tweaks</li>
+    <li> Transfer to live server</li>
+    <li> More testing..links and responsiveness</li>
+    <li> Browser check...Safair, Google - it all works!</li>
+  </ul>
+</div>
+
+<div class="feedpost">
+  <h5>5. Aftermath</h5>
+  <p>
+    It's not goodbye. It's a see you later. I will provide you with documentation and source files. We will sign off on the final check with. Remember I am always here for you!
   </p>
 </div>
 
 <div class="feedpost">
-  <h4>Development</h4>
+  <h5>What I do and don't do</h5>
   <p>
-    Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.
+    I build hand-crafted static sites using Jekyll. No templates. No prewritten code. Each website is a unicorn. I give you a incredibly fast website that is easily editable and user friendly. I do not f*ck with Wordpress, PHP, or dare I say it...Wix or Squarespace. Here are the tools I use to build.
   </p>
+  <ul>
+    <li> HTML5 and CSS3</li>
+    <li> JavaScript and jQuery</li>
+    <li> CloudCannon </li>
+    <li> Jekyll</li>
+  </ul>
+</div>
+<div>
+<p class="centered-text feedpost">
+  Sound like a plan? Let's do this. Contact me <a href="#register">here</a>
+</p>
 </div>
 </section>
