--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ featured-image_path: images/whitedesk.jpg
 
     <div class="left-pull">
     <h2 class="left-text"> Hi, I'm <span class="right-pull">Laura</span></h2>
-      <p class="left-text"> Party in the front! I am a front-end developer that builds hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand. Want to work with me? Drop me a <a href="#register">line.</a>
+      <p class="left-text"> Party in the front! I am a front-end developer that builds hand crafted websites for individuals and small to medium sized businesses. When I'm not on my computer you can find me collecting stamps in my passport, checking out a new coffee shop, or listening to some 90's gangster rap.  I use my fresh perspective, creative eye, and love for development to ensure that your website reflects your kickass brand.
       </p>
       </div>
       <!-- To learn more head over to my professional-ish <a href="/blog.html">blog</a>. -->
@@ -43,7 +43,7 @@ featured-image_path: images/whitedesk.jpg
             <i class="fa fa-code" aria-hidden="true"></i>
             <h5>Quality <br> Code</h5>
             <p>
-            I use the most up to date technology to build including HTML5, CSS3, JavaScript, JQuery and more</p>
+            I use the most up to date technology to build including HTML5, CSS3, JavaScript, JQuery and always learning more!</p>
           </div>
         </div>
 
@@ -53,7 +53,7 @@ featured-image_path: images/whitedesk.jpg
           <i class="fa fa-mobile" aria-hidden="true"></i>
           <h5>Responsive <br> Design </h5>
           <p>
-          Your responsive site will look awesome on all screen sizes. Even the Samsung that blows up.</p>
+          Your brand new responsive website will look great on all screen sizes.Even the Samsung that blows up.</p>
         </div>
         </div>
 
@@ -63,7 +63,7 @@ featured-image_path: images/whitedesk.jpg
           <i class="fa fa-users" aria-hidden="true"></i>
           <h5>User <br> Friendly</h5>
           <p>
-          Not only will your site be clean and easy for the user to interact with. You will be in control of content on your site that is easily editable through CloudCannon. </p>
+          Not only will your site be clean and easy for the user to interact with. Your site is easily editable through my CMS CloudCannon. </p>
           </div>
         </div>
 
@@ -85,63 +85,42 @@ featured-image_path: images/whitedesk.jpg
 <!-- THIS IS THE PROCESS SECTION ---->
 <section class="right-pull colorback" id="process">
   <div>
-      <h2>Process</h2>
+      <h2>Volunteer</h2>
   </div>
 
   <div>
     <p>
-      You built the business. I'll build the website. We will go through a highly individualized process every step of the way from scope and strategy to design and development.
+      I introduce you to a new development series I call #websitesthatgiveashit. As a Digital Nomad it is important to give back to the community in which we so happily settle.  I am currently in Chiang Mai, and I have chosen the Free Bird Cafe to donate my web development services. An incredible organization with a fearless learder ensuring the health and education to Burmese Refugees in Thailand. A website will give a platform to spread the mission, expand their reach, and fufill their vision. I left our initial website meeting feeling humbled and inspired. The website will be done by the end of March - I can't wait to share! If you are curious to know more now, follow this link to Free Bird Cafe <a href="https://www.facebook.com/FreeBirdCafe/">Facebook.</a>
      </p>
-      <a  href="/process.html" class="button">Learn More</a>
+
   </div>
     <a id="scroll" class="scroll-to centered chevron" href="#portfolio-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 </section>
 
-<!--THIS IS THE PORTFOLIO SECTION  -->
-<section class="centered-text" id="portfolio-banner">
-        <div>
-        <h3>Street Cred</h3>
-        <p>
-          Finishing up some projects. Portfolio coming soon!
-        </p>
-      </div>
-        <div class="owl-carousel loop owl-theme ">
-        <div class="item"> <img src="/images/biggie.jpg" /> </div>
-        <div class="item"> <img src="/images/biggie.jpg" /> </div>
-        <div class="item"> <img src="/images/biggie.jpg" /> </div>
-        <div class="item"> <img src="/images/biggie.jpg" /> </div>
-        </div>
-
-<a id="scroll" class="scroll-to" href="#register"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-
-</section>
 
 
 <!-- THIS IS THE CONTACT FORM -->
-<section class="centered centered-text" id="register">
+<section class="centered centered-text colorback" id="do-banner">
 
-  <div>
-      <h3> Get in touch </h3>
-      <p> Fill out the form below, tell me a bit about your project, and I'll be in touch to build your kick ass website. Beep. </p>
+  <div id="contact">
+    <div class="centered">
+      <h3>Contact</h3>
+      <p>
+        Laura Treganowan<br /> Chiang Mai, Thailand
+      </p>
 
-      <form class="grid-center spacebetween" action="https://formspree.io/treganowanl@gmail.com"
-          method="POST">
-          <div class="col-4_sm-12">
+      <div>
+        <p>
+          treganowanl@gmail.com
+        </p>
+      </div>
 
-            <input type="text" name="name" placeholder="Your Name">
-          </div>
-          <div class="col-4_sm-12">
-
-            <input type="email" name="_replyto" placeholder="Your Email">
-        </div>
-        <div class="col-8">
-          <textarea placeholder="Budget. Timeline. Business size. Social Links. Etc."></textarea>
-        </div>
-        <div class="col-12">
-          <input type="submit" value="Submit" class="button">
-        </div>
-      </form>
-  </div>
+      <nav class="social-nav centered">
+        <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
+        <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
+      </nav>
+    </div>
   <a id="scroll" class="scroll-to centered chevron" href="header"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a>
 </section>
 
