--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,9 @@ description: portfolio
   <li>Front End Development</li>
   </ul>
 
-  <h5>Kind words from Kendra</h5>
+  <h5>How I learned to Code</h5>
   <p>
-      My first REAL client! Yay. Kendra of Linea Body Works in San Francisco had an old Wordpress site that had crazy colors and got hacked. I wish I took a picture of this transformation! First, she wanted the Wordpress taken down. So we put up a simple splash page with contact info while I was building the site. She wanted to up her website game by creating a clean and modern website with a touch of blue and gold. Challenge accepted! A one page scrolling website will give her clients one place to connect,learn more, and book appointments.
+    I learned to code at a luxurious web development bootcamp in Canngu, Bali. The <a href="https//:www.instituteofcode.com">provides an unconventional approach to education. We were plopped down in a luxury villa with a personal chef, daily yoga, and incredible mentors. Due to the fact that all of our needs were met we were able to focus on learning. In 10 short days we got a great start on Front-End Web Development. I absolutely fell in love with coding and proud that this is my first post-bootcamp project. Currently expanding my front-end knowledge with further Bootstrap, JavaScript, and jQuery online courses.</a>
   </p>
 </div>
 
