--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,18 @@ description: portfolio
   <li>Logo Redesign</li>
   <li>Website Design</li>
   <li>Front End Development</li>
+  <li>A high five</li>
   </ul>
 
   <h5>How I Learned to Code</h5>
   <p>
-    I learned to code at a luxurious web development bootcamp in Canngu, Bali. The <a href="https//:www.instituteofcode.com"></a>provides an unconventional approach to education. We were plopped down in a luxury villa with a personal chef, daily yoga, and incredible mentors. Due to the fact that all of our needs were met we were able to focus on learning. In 10 short days we got a great start on Front-End Web Development. I absolutely fell in love with coding and proud that this is my first post-bootcamp project. I am currently expanding my front-end knowledge with further Bootstrap, JavaScript, and jQuery online courses. Projects are only going to get bigger and better from here. Talk nerdy to me!
+    I learned to code at a luxurious web development bootcamp in Canngu, Bali. The <a href="https//:www.instituteofcode.com">Institute of Code</a> provides an unconventional approach to education. We were plopped down in a luxury villa with a personal chef, daily yoga, and incredible mentors. Due to the fact that all of our needs were met we were able to focus on learning. In 10 short days we got a great start on Front-End Web Development. Did I mention 80% of partcipants are women? Woot! #codelikeagirl. I absolutely fell in love with coding and proud that this is my first post-bootcamp project. I am currently expanding my front-end knowledge with further Bootstrap, JavaScript, and jQuery online courses. Projects are only going to get bigger and better from here. Talk nerdy to me!
   </p>
+  <div class="centered">
+  <p>Click <a href="/process">here. </a>to for an overview my web development process. Ready to work together? Shoot me an email at <a href=terganowanl@gmail.com.>treganowanl@gmail.com</a></p>
+  </div>
 </div>
+
 
 <div class="item col-6_sm-12" id="portfolio"></div>
 
