--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ featured-image_path: images/whitedesk.jpg
 <!-- THIS IS THE PROCESS SECTION ---->
 <section class="right-pull colorback" id="process">
   <div>
-      <h2>Volunteer</h2>
+      <h2>Give Back</h2>
   </div>
 
   <div>
@@ -105,7 +105,7 @@ featured-image_path: images/whitedesk.jpg
   <div id="contact">
     <div class="centered">
       <h3>Contact</h3>
-      <p>
+      <p class="letterspace">
         Laura Treganowan<br /> Chiang Mai, Thailand
       </p>
 
