--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 Blog
-<div class="grid col-3">
+<div class="grid">
 
   {% for post in site.posts limit:3 %}
 <div class="col-3 feedpost">
