--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ Blog
 <div class="grid">
 
   {% for post in site.posts limit:3 %}
-<div class="col-3 feedpost">
+<div class="feedpost">
     <img src="{{post.image_path}}" />
   <h1>{{post.title}}</h1>
 
