--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@ layout: default
 title: Blog
 ---
 Blog
-<div class="grid col-3">
+<div class="grid">
 
   {% for post in site.posts limit:3 %}
-<div class=" col-3 feedpost">
+<div class=" auto feedpost">
     <img src="{{post.image_path}}" />
   <h1>{{post.title}}</h1>
 
