--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
 <section class="container feedpost">
-  <h4>class="centered"> Latest Posts </h4>
+  <h4 class="centered"> Latest Posts </h4>
 
   <div class="grid blog-loop">
     {% for post in site.posts limit:6 %}
