--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ featured-image_path: images/whitedesk.jpg
   <section id="intro-banner" class="center-text">
 
     <div>
-      <h1 class="relative"> Freelance Web Development </h1>
-      <h4 class="relative">Talk Nerdy To Me</h4>
+      <h1 class="relative"> Laura Treganowan</h1>
+      
   </div>
   <a id="scroll" class="scroll-to centered chevron" href="#about-banner"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
 </section>
