--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ featured-image_path: images/whitedesk.jpg
 
 
   <!-- FIRST: PICTURE SECTION ---->
-  <section id="intro-banner" class="center-text"></section>
+  <section id="intro-banner"></section>
 
 <!-- SECOND: INTRO SECTION ---->
-  <section id="about-banner" class="center-text">
+  <section class="center-text">
 
   <div>
     <h2>Hi, I'm Laura</h2>
@@ -37,10 +37,13 @@ featured-image_path: images/whitedesk.jpg
     </section>
 
 
-
 <!-- THIS IS THE PROJECTS SECTION ---->
-<section id="process">
-
+<section>
+<div>
+  <p>
+    Here will be a section for all of my latest projects, volunteer work, and learning.
+  </p>
+</div>
 </section>
 
 
