--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@ featured-image_path: images/whitedesk.jpg
 
   <div>
     <h2>Hi, I'm Laura</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
+
+      Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
+
+      In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
+    </p>
   </div>
 
   </section>
 
  <!-- THIRD: BLOG SECTION -->
     <section class="container feedpost">
-      <h4 class="centered feedpost"> Latest Posts </h4>
+      <h2 class="centered"> This just in... </h2>
 
       <div class="grid blog-loop feedpost">
         {% for post in site.posts limit:3 %}
@@ -40,9 +47,13 @@ featured-image_path: images/whitedesk.jpg
 <!-- THIS IS THE PROJECTS SECTION ---->
 <section>
 <div>
+  <h2></h2>
   <p>
     Here will be a section for all of my latest projects, volunteer work, and learning.
-  </p>
+
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
+
+      Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
 </div>
 </section>
 
