--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ featured-image_path: images/whitedesk.jpg
 <!-- SECOND: INTRO SECTION ---->
   <section class="center-text">
 
-  <div>
     <h2>Hi, I'm Laura</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
@@ -21,8 +20,6 @@ featured-image_path: images/whitedesk.jpg
 
       In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
     </p>
-  </div>
-
   </section>
 
  <!-- THIRD: BLOG SECTION -->
@@ -47,7 +44,7 @@ featured-image_path: images/whitedesk.jpg
 <!-- THIS IS THE PROJECTS SECTION ---->
 <section>
 <div>
-  <h2></h2>
+  <h2>Projects</h2>
   <p>
     Here will be a section for all of my latest projects, volunteer work, and learning.
 
