--- a/about.html
+++ b/about.html
@@ -6,5 +6,24 @@ featured-image_path: images/whitedesk.jpg
 ---
 
 <section>
-  <h2>This is your about page</h2>
+<div class="grid">
+<div class="col-6">
+  <h2> About Laura </h2>
+  <p> Ad quo animal legimus legendos. Ut eum veniam dicunt virtute, an noster voluptua convenire mei. At sed tollit scaevola, an maiorum repudiare per. Mei epicuri apeirian ne, usu iisque aliquam praesent ad, omnes ullamcorper in pri. Vitae quaeque mea cu. Mei quot laoreet laboramus eu, cu propriae patrioque maiestatis vel. </p>
+
+  <p> Ut eum veniam dicunt virtute, an noster voluptua convenire mei. At sed tollit scaevola, an maiorum repudiare per. Mei epicuri apeirian ne, usu iisque aliquam praesent ad, omnes ullamcorper in pri. Vitae quaeque mea cu. Mei quot laoreet laboramus eu, cu propriae patrioque maiestatis vel. </p>
+  <ul>
+    <li> Apple </li>
+    <li> Pineapple </li>
+    <li> Cucumber </li>
+    <li> Pinacolada </li>
+  </ul>
+  <p> Ut eum veniam dicunt virtute, an noster voluptua convenire mei. At sed tollit scaevola, an maiorum repudiare per. Mei epicuri apeirian ne, usu iisque aliquam praesent ad, omnes ullamcorper in pri. Vitae quaeque mea cu. Mei quot laoreet laboramus eu, cu propriae patrioque maiestatis vel. </p>
+  <blockquote> Ut eum veniam dicunt virtute, an noster voluptua convenire mei. At sed tollit scaevola, an maiorum repudiare per. Mei epicuri apeirian ne, usu iisque aliquam praesent ad, omnes ullamcorper in pri. Vitae quaeque mea cu. Mei quot laoreet laboramus eu, cu propriae patrioque maiestatis vel. </blockquote>
+</div>
+
+<div class="col-6">
+
+</div>
+</div>
 </section>
