--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@ featured-image_path: images/whitedesk.jpg
 
 
   <!-- FIRST: PICTURE SECTION ---->
-  <section id="intro-banner"></section>
+  <section>
+    <div id="intro-banner">
+
+    </div>
+  </section>
 
 <!-- SECOND: INTRO SECTION ---->
   <section class="center-text">
