--- a/index.html
+++ b/index.html
@@ -45,15 +45,21 @@ featured-image_path: images/whitedesk.jpg
 
 
 <!-- THIS IS THE PROJECTS SECTION ---->
-<section>
-<div>
-  <h2>Projects</h2>
+<section class="grid-middle">
+<div class="col-6">
+  <h2>Side Hustle</h2>
   <p>
     Here will be a section for all of my latest projects, volunteer work, and learning.
 
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
 
       Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
+</div>
+<div class="col-6">
+  <h2>Latest Jams</h2>
+  <p>
+<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+      
 </div>
 </section>
 
