--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ featured-image_path: images/whitedesk.jpg
 
       Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
 </div>
-<div class="col-6">
+<div class="col-6 centered">
   <h2>Latest Jams</h2>
   <p>
 <iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-      
+
 </div>
 </section>
 
