--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ featured-image_path: images/whitedesk.jpg
 
 
 <!-- THIS IS THE PROJECTS SECTION ---->
-<section class="grid-middle">
+<section class="grid-center">
 <div class="col-6">
   <h2>Side Hustle</h2>
   <p>
