--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ featured-image_path: images/whitedesk.jpg
 </div>
 <div class="col-6 centered">
   <h2>Latest Jams</h2>
-  <p>
-<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+  <p class="centered">
+<iframe src="https://open.spotify.com/embed/user/1211322207/playlist/04MNngA5TfqrbGS6RxXvLa" width="400" height="480" frameborder="0" allowtransparency="true"></iframe>
 
 </div>
 </section>
