--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ featured-image_path: images/whitedesk.jpg
   <section class="center-text">
 
     <h2>Hi, I'm Laura</h2>
+    <p><i class="fa fa-map-marker" aria-hidden="true"> Bangkok, Thailand </i></p>
     <p class="tagline">
-      Fitness Junkie - Coffee Enthusiast - Always Curious - Tech Nerd
+      Fitness Junkie - Coffee Enthusiast - World Traveler - Tech Nerd
     </p>
+
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nisl nulla, pulvinar a dui id, rutrum sollicitudin leo. Nam a leo feugiat, facilisis risus sit amet, rhoncus est. In sed vehicula nulla, a facilisis urna. Vestibulum ac ornare mauris. Quisque arcu ligula, aliquam at rutrum a, rutrum eu est. Donec sodales elementum finibus. Quisque accumsan venenatis arcu a feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut et efficitur quam. Vestibulum id est rutrum, placerat nibh eget, sollicitudin neque. Vestibulum rhoncus risus ac urna fermentum porttitor. Nunc sed ullamcorper diam, et consequat quam. Praesent convallis eget orci sagittis feugiat.
 
