--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ featured-image_path: images/whitedesk.jpg
   <section class="center-text">
 
     <h2>Hi, I'm Laura</h2>
-    <p><i class="fa fa-map-marker" aria-hidden="true"> Bangkok, Thailand </i></p>
+    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Bangkok, Thailand </p>
     <p class="tagline">
       Fitness Junkie - Coffee Enthusiast - World Traveler - Tech Nerd
     </p>
