--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@ featured-image_path: images/whitedesk.jpg
 
 
   <!-- FIRST: PICTURE SECTION ---->
-  <section>
-    <div id="intro-banner">
+  <section id="intro-banner">
+    <!-- <div >
 
-    </div>
+    </div> -->
   </section>
 
 <!-- SECOND: INTRO SECTION ---->
   <section class="center-text">
 
-    <h2>Hi, I'm Laura</h2>
+    <h1>Hi, I'm Laura</h1>
     <p><i class="fa fa-map-marker" aria-hidden="true"></i> Bangkok, Thailand </p>
     <p class="tagline">
       Fitness Junkie - Coffee Enthusiast - World Traveler - Tech Nerd
@@ -28,12 +28,16 @@ featured-image_path: images/whitedesk.jpg
       Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
 
       In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
+      <a class="button" href="/about.html"> Full Bio </a>
     </p>
   </section>
 
  <!-- THIRD: BLOG SECTION -->
     <section class="container feedpost">
       <h2 class="centered"> This just in... </h2>
+      <p class="tagline">
+        Sometimes I write things down
+      </p>
 
       <div class="grid blog-loop feedpost">
         {% for post in site.posts limit:3 %}
