--- a/portfolio.html
+++ b/portfolio.html
@@ -2,52 +2,24 @@
 layout: default
 description: portfolio
 ---
-<div class="feedpost centered-text"><h4>STREET CRED</h4></div>
-<section class="feedpost">
-<div class="grid-space-Between">
-
-<div class="col-6_sm-12">
-  <p id="subtitle">
-    2017
-  </p>
-  <h4>Linea Body Works</h4>
-  <p id="subtitle">Massage Therapy - San Francisco, CA<p>
-  <p>
-    It has been exactly 1 month since I first set eyes on HTML. I had the pleasure of designing and developing a website for Kendra of Linea Body in San Francisco, California. This project was a total brand refresh from logo to finished site. We took her exisiting Wordpress site down and put a temporary landing page up while the site was being built. She wanted to up her website game by creating a clean and modern website with touches of blue and gold. Challenge accepted! A one page scrolling website will give her clients one place to connect,learn more, and book appointments.
-  </p>
-
-  <h5>Languages Used</h5>
-  <ul>
-    <li>HTML5</li>
-    <li>CSS3</li>
-    <li>JavaScript</li>
-    <li>JQuery</li>
-  </ul>
-
-  <h5>Project Requirements</h5>
-  <ul>
-  <li>Logo Redesign</li>
-  <li>Website Design</li>
-  <li>Front End Development</li>
-  <li>A high five</li>
-  </ul>
-
-  <h5>How I Learned to Code</h5>
-  <p>
-    I learned to code at a luxurious web development bootcamp in Canngu, Bali. The <a href="https//:www.instituteofcode.com">Institute of Code</a> provides an unconventional approach to education. We were plopped down in a luxury villa with a personal chef, daily yoga, and incredible mentors. Due to the fact that all of our needs were met we were able to focus on learning. In 10 short days we got a great start on Front-End Web Development. Did I mention 80% of partcipants are women? Woot! #codelikeagirl. I absolutely fell in love with coding and proud that this is my first post-bootcamp project. I am currently expanding my front-end knowledge with further Bootstrap, JavaScript, and jQuery online courses. Projects are only going to get bigger and better from here. Talk nerdy to me!
-  </p>
-  <div class="centered">
-  <p>Click <a href="/process">here. </a>to for an overview my web development process. Ready to work together? Shoot me an email at <a href=terganowanl@gmail.com.>treganowanl@gmail.com</a></p>
-  </div>
+<section>
+<div class="centered-text">
+<h4>I Only do jobs that I can wear yoga pants</h4>
+<p>Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
+<a class="button" href="/pdf/FunResume.pdf">Download Resume</a>
 </div>
-
-
-<div class="item col-6_sm-12" id="portfolio"></div>
-
-</div>
-
 </section>
 
+<section class="grid-center">
+  <h4>I Code for Fun</h4>
+  <div>
+  <p>
+    Building websites is kind of like having a child (I can imagine)...it can be a long, painful process with moments of happiness and when it pops out it's head may be in the shape of a cone. Websites are similar; always a work in progress. Here is what I am currently working on. Some are final products. Some are my deformed child.
+  </p>
+</div>
+<!-- Link out to websites -->
+  <div id="test-pic" class="col-3"></div>
+    <div id="test-pic" class="col-3"></div>
+      <div id="test-pic" class="col-3"></div>
 
-
-<!-- Insert education from IOC + badges -->
+</section>
