--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@ featured-image_path: images/whitedesk.jpg
 
 
   <!-- FIRST: PICTURE SECTION ---->
-  <section id="intro-banner">
-    <!-- <div >
-
-    </div> -->
+  <section>
+    <div class="no-padding" id="intro-banner"></div>
   </section>
 
 <!-- SECOND: INTRO SECTION ---->
@@ -28,6 +26,7 @@ featured-image_path: images/whitedesk.jpg
       Fusce congue ultrices mauris vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dapibus urna non imperdiet scelerisque. Sed fermentum massa a enim dictum, ac pharetra nisi egestas. Nam et eros ut quam auctor sagittis a cursus ex. In fringilla libero nisl, id bibendum est auctor sed. Nulla pharetra imperdiet cursus. Mauris suscipit malesuada elit in dignissim. Morbi aliquet augue ut est finibus molestie.
 
       In ut massa at turpis ullamcorper scelerisque. In sed enim volutpat, tincidunt ante ac, dictum tellus. Donec imperdiet sagittis neque, id volutpat ipsum aliquam sit amet. Praesent sit amet consequat enim. Fusce felis dolor, faucibus eu quam ac, ullamcorper rhoncus ipsum. Pellentesque iaculis tincidunt quam, vel vehicula nulla elementum vitae. Nulla porta dignissim nibh, id auctor lectus varius ut. Duis et eleifend lacus, id lacinia tellus. Nam vehicula lectus hendrerit bibendum fermentum.
+      <br />
       <a class="button" href="/about.html"> Full Bio </a>
     </p>
   </section>
