--- a/portfolio.html
+++ b/portfolio.html
@@ -3,14 +3,14 @@ layout: default
 description: portfolio
 ---
 <section>
-<div class="centered-text">
-<h4>I Only do jobs that I can wear yoga pants</h4>
-<p>Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
+<div>
+<h4>One Rule. One Rule Only. <br /> I Only work where I can wear yoga pants</h4>
+<p>Spandex are life and my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
 <a class="button" href="/pdf/FunResume.pdf">Download Resume</a>
 </div>
 </section>
 
-<section class="grid-center">
+<section class="grid-spaceBetween">
   <h4>I Code for Fun</h4>
   <div>
   <p>
