--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@ featured-image_path: images/whitedesk.jpg
 
 
   <!-- FIRST: PICTURE SECTION ---->
-  <section>
-    <div class="no-padding" id="intro-banner"></div>
-  </section>
+  <section id="intro-banner"></section>
 
 <!-- SECOND: INTRO SECTION ---->
   <section class="center-text">
@@ -34,9 +32,6 @@ featured-image_path: images/whitedesk.jpg
  <!-- THIRD: BLOG SECTION -->
     <section class="container feedpost">
       <h2 class="centered"> This just in... </h2>
-      <p class="tagline">
-        Sometimes I write things down
-      </p>
 
       <div class="grid blog-loop feedpost">
         {% for post in site.posts limit:3 %}
