--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@ description: portfolio
 ---
 <section>
 <div>
-<h4>One Rule. One Rule Only. <br /> I Only work where I can wear yoga pants</h4>
-<p>Spandex are life and my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
+<h4>One Rule. One Rule Only.</h4>
+<h6 class="tagline">I Only work where I can wear yoga pants</h6>
+<p>Spandex are life nd my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
 <a class="button" href="/pdf/FunResume.pdf">Download Resume</a>
 </div>
 </section>
@@ -22,4 +23,11 @@ description: portfolio
     <div id="test-pic" class="col-3"></div>
       <div id="test-pic" class="col-3"></div>
 
+</section>
+
+<section>
+  <h4>Give Back</h4>
+  <p>
+    Do you know of a non-profit that needs a website? Since I am usually bouncing from place to place I volunteer my time by building sites for non-profit organizations. Currently working on Ageless Aviation Dreams Foundation. Will have a space available this fall. Email me with inquires.
+  </p>
 </section>
