--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@ description: portfolio
 <h4>One Rule. One Rule Only.</h4>
 <h6 class="tagline">I Only work where I can wear yoga pants</h6>
 <p>Spandex are life nd my life is fitness, travel, and freelance development. Here is my life on paper. I've worked in the health and fitness business for the past few years and recently have picked up web development. Blah Blah work.</p>
-<a class="button" href="/pdf/FunResume.pdf">Download Resume</a>
+<a class="button centered" href="../pdf/FunResume.pdf">Download Resume</a>
 </div>
 </section>
 
